<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/logo_flocator"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@id/window_auth"
        app:layout_constraintLeft_toRightOf="@id/guideline_left"
        app:layout_constraintRight_toLeftOf="@id/guideline_right"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="0.2" />

    <LinearLayout
        android:id="@+id/window_auth"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/guideline_left"
        app:layout_constraintRight_toLeftOf="@id/guideline_right"
        app:layout_constraintTop_toBottomOf="@id/logo_flocator"
        app:layout_constraintVertical_weight="0.8">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/login"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            app:boxCornerRadiusBottomEnd="9dp"
            app:boxCornerRadiusBottomStart="9dp"
            app:boxCornerRadiusTopEnd="9dp"
            app:boxCornerRadiusTopStart="9dp"
            app:boxStrokeWidth="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_login_field_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_login_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/font"
            android:layout_marginBottom="20dp"
            android:hint="@string/password_hint"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            app:boxCornerRadiusBottomEnd="9dp"
            app:boxCornerRadiusBottomStart="9dp"
            app:boxCornerRadiusTopEnd="9dp"
            app:boxCornerRadiusTopStart="9dp"
            app:boxStrokeWidth="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_login_field_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/entrance_btn"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@color/tint"
            android:text="@string/entry_button_text"
            android:textSize="16sp"
            app:cornerRadius="9dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registration_btn"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:backgroundTint="#EBEBEB"
            android:text="@string/register_button_text"
            android:textColor="#121212"
            android:textSize="16sp"
            app:cornerRadius="9dp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>