...
            android:id="@+id/map_fragment"
            android:name="ru.flocator.map.internal.ui.FLocatorMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/open_add_mark_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:backgroundTint="#FFFFFF"
            android:text="@string/add_mark"
...
